--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>página home</h1>
-    <a href="vendas.htmal"></a>
+    <a href="vendas.html"> ir para a página de vendas </a>
 </body>
 </html>
